--- a/index.html
+++ b/index.html
@@ -110,20 +110,7 @@
                     </span>
                 </div>
                 <div class="chart-controls">
-                    <button class="fixed-scale-btn" id="fixedScaleBtn" title="Auto-scale to current price">
-                        <span class="scale-icon">⊙</span>
-                        Fixed Scale
-                    </button>
-                    <div class="trade-markers-legend">
-                        <span class="legend-item">
-                            <span class="marker-icon buy">▲</span>
-                            Entry
-                        </span>
-                        <span class="legend-item">
-                            <span class="marker-icon sell">▼</span>
-                            Exit
-                        </span>
-                    </div>
+                    <button class="fixed-scale-btn" id="fixedScaleBtn" title="Auto-scale to current price">⊙</button>
                     <div class="timeframe-selector">
                     <button class="timeframe-btn" data-period="1h" data-interval="1m">1m</button>
                     <button class="timeframe-btn" data-period="1d" data-interval="5m">5m</button>
